// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template reducer stores draft 1`] = `
Object {
  "byId": Object {
    "test-draft": Object {
      "draft": Object {
        "id": "test-draft",
      },
    },
  },
  "contentPreview": Object {
    "draft": Object {},
    "published": Object {},
  },
  "getLoading": false,
  "list": Array [],
  "listError": null,
}
`;

exports[`Template reducer stores preview of draft 1`] = `
Object {
  "byId": Object {},
  "contentPreview": Object {
    "draft": Object {
      "test-template": Object {
        "html": "<h1>Preview of Test Template</h1>",
        "subject": "Preview of Test Template",
      },
    },
    "published": Object {},
  },
  "list": Array [],
  "listError": null,
}
`;

exports[`Template reducer stores published 1`] = `
Object {
  "byId": Object {
    "test-published": Object {
      "published": Object {
        "id": "test-published",
      },
    },
  },
  "contentPreview": Object {
    "draft": Object {},
    "published": Object {},
  },
  "getLoading": false,
  "list": Array [],
  "listError": null,
}
`;
